# basis

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .rumdl.toml  CLAUDE.md  LICENSE  README.md  prek.toml  pyproject.toml
.claude/skills/cleanup-code/: SKILL.md
.claude/skills/write-code/: SKILL.md
.claude/skills/write-docstrings/: SKILL.md
.claude/skills/write-method-docs/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/workflows/: test.yml
basis/: __init__.py  basis.py  cli.py
tests/: __init__.py  test_basis.py  test_stub.py
